@@ -707,98 +707,6 @@ gsubvec(GEN x, GEN y)
     return gsub(x,y);
 }
 
-/* [1^B,...,N^B] */
-GEN
-vecpowuu(long N, ulong B)
-{
-  GEN v;
-  long p, i;
-  forprime_t T;
-
-  if (B <= 2)
-  {
-    if (!B) return const_vec(N,gen_1);
-    v = cgetg(N+1, t_VEC); if (N == 0) return v;
-    gel(v,1) = gen_1;
-    if (B == 1)
-      for (i = 2; i <= N; i++) gel(v,i) = utoipos(i);
-    else
-      for (i = 2; i <= N; i++) gel(v,i) = sqru(i);
-    return v;
-  }
-  v = const_vec(N, NULL);
-  u_forprime_init(&T, 3, N);
-  while ((p = u_forprime_next(&T)))
-  {
-    long m, pk, oldpk;
-    gel(v,p) = powuu(p, B);
-    for (pk = p, oldpk = p; pk; oldpk = pk, pk = umuluu_le(pk,p,N))
-    {
-      if (pk != p) gel(v,pk) = mulii(gel(v,oldpk), gel(v,p));
-      for (m = N/pk; m > 1; m--)
-        if (gel(v,m) && m%p) gel(v, m*pk) = mulii(gel(v,m), gel(v,pk));
-    }
-  }
-  gel(v,1) = gen_1;
-  for (i = 2; i <= N; i+=2)
-  {
-    long vi = vals(i);
-    gel(v,i) = shifti(gel(v,i >> vi), B * vi);
-  }
-  return v;
-}
-/* [1^B,...,N^B] */
-GEN
-vecpowug(long N, GEN B, long prec)
-{
-  GEN v, pow = NULL;
-  long p, precp = 2, eB, prec0;
-  forprime_t T;
-  if (N == 1) return mkvec(gen_1);
-  eB = gexpo(B);
-  prec0 = eB < 5? prec: prec + nbits2extraprec(eB);
-  u_forprime_init(&T, 2, N);
-  v = const_vec(N, NULL);
-  gel(v,1) = gen_1;
-  while ((p = u_forprime_next(&T)))
-  {
-    long m, pk, oldpk;
-    if (!pow)
-      pow = gpow(utor(p,prec0), B, prec);
-    else
-    {
-      GEN t = gpow(divru(utor(p,prec0), precp), B, prec);
-      pow = gmul(pow, t); /* (p / precp)^B * precp^B */
-    }
-    precp = p;
-    gel(v,p) = pow; /* p^B */
-    if (prec0 != prec) gel(v,p) = gprec_wtrunc(gel(v,p), prec);
-    for (pk = p, oldpk = p; pk; oldpk = pk, pk = umuluu_le(pk,p,N))
-    {
-      if (pk != p) gel(v,pk) = gmul(gel(v,oldpk), gel(v,p));
-      for (m = N/pk; m > 1; m--)
-        if (gel(v,m) && m%p) gel(v, m*pk) = gmul(gel(v,m), gel(v,pk));
-    }
-  }
-  return v;
-}
-
-GEN
-dirpowers(long n, GEN x, long prec)
-{
-  pari_sp av = avma;
-  GEN v;
-  if (n <= 0) return cgetg(1, t_VEC);
-  if (typ(x) == t_INT && lgefint(x) <= 3 && signe(x) >= 0)
-  {
-    ulong B = itou(x);
-    v = vecpowuu(n, B);
-    if (B <= 2) return v;
-  }
-  else v = vecpowug(n, x, prec);
-  return gerepilecopy(av, v);
-}
-
 /* return [1^(2/d), 2^(2/d),...,lim^(2/d)] */
 static GEN
 mkvroots(long d, long lim, long prec)
