@@ -1,0 +1,16 @@
+[]
+[]
+[1, 1, 1, 1]
+[1, 2, 3, 4]
+[1, 4, 9, 16]
+[1, 8, 27, 64]
+[1, 1.4142135623730950488016887242096980786, 1.73205080756887729352744634150
+58723670, 2.0000000000000000000000000000000000000]
+0
+0
+10
+12.090146129863427947363219363504219501
+  ***   at top-level: dirpowerssum('x,1)
+  ***                 ^------------------
+  *** dirpowerssum: incorrect type in dirpowerssum (t_POL).
+Total time spent: 69
