@@ -74,12 +74,4 @@ d(9, 11), Mod(7, 11), Mod(3, 11), Mod(6, 11), Mod(1, 11)]
 [2, 6, 18, 54, 162, 486]
 []
 [1]
-[]
-[]
-[1, 1, 1, 1]
-[1, 2, 3, 4]
-[1, 4, 9, 16]
-[1, 8, 27, 64]
-[1, 1.4142135623730950488016887242096980786, 1.73205080756887729352744634150
-58723670, 2.0000000000000000000000000000000000000]
 Total time spent: 1
