@@ -49,11 +49,3 @@ powers(Pi,7)
 powers(3, 5, 2)
 powers(3,-1)
 powers(3,0)
-
-dirpowers(-1,1)
-dirpowers(0,1)
-dirpowers(4,0)
-dirpowers(4,1)
-dirpowers(4,2)
-dirpowers(4,3)
-dirpowers(4,1/2)
